<resources>
    <string name="app_name">Dynamo</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profil</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="skip_intro">Skip Intro</string>
    <string name="next">Selanjutnya</string>
    <string name="register">Daftar</string>
    <string name="login">Masuk</string>
    <string name="facebook_sign_up">Daftar dengan Facebook</string>
    <string name="google_sign_up">Daftar dengan Google</string>
    <string name="facebook_login">Masuk dengan Facebook</string>
    <string name="google_login">Masuk dengan Google</string>
    <string name="apple_sign_up">Daftar dengan Apple</string>
    <string name="password">Password</string>
    <string name="forgot_password">Lupa Password?</string>
    <string name="email">Email</string>
    <string name="or">Atau</string>
    <string name="title_activity_test">testActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_world">Hello Square World!</string>
    <string name="register_desc">Membuat thread, berkomentar, memberikan vote, serta begabung dengan komunitas.</string>
    <string name="come_register">Ayo daftar dan gabung dengan komunitas yang kamu suka!</string>
    <string name="username">Username<font color='#FF0000'>*</font></string>
    <string name="user_denied_storage_permission">We noticed you have disabled our permission. We will take you to the Application settings,you can re-enable the permission there</string>
    <string name="facebook_app_id">151428460283478</string>
    <string name="fb_login_protocol_scheme">fb151428460283478</string>
    <string name="text_with_image">Press [img src=dynamo_profile/] to accept or [img src=avatar/] to retry</string>
    <string name="there_no_thread">Tidak Ada Thread</string>
    <string name="join_now">Daftar Sekarang</string>
    <string name="there_no_community">Tidak Ada Komunitas</string>
    <string name="come_join_community">Ayo gabung dengan komunitas yang kamu suka!</string>
    <string name="come_join_community_and_first">Ayo gabung dan jadilah yang pertama membuat thread di komunitas ini!</string>
    <string name="explore_community">Jelajahi Komunitas</string>
    <string name="join">Gabung</string>
    <string name="have_no_moderator">Tidak Ada Moderator</string>
    <string name="write_content_here">Tulis konten disini...</string>
    <string name="write_title_here">Tulis judul disini...</string>
    <string name="minimum_8_char">Judul Minimal 8 karakter</string>
    <string name="exit">Keluar</string>
    <string name="change_rule">Ubah Peraturan</string>
    <string name="change">Ubah</string>
    <string name="haha">Aldus Corporation, which later merged with Adobe Systems, ushered lorem ipsum into the information age with its desktop publishing software Aldus PageMaker. The program came bundled with lorem ipsum dummy text for laying out page content, and other word processors like Microsoft Word followed suit. More recently the growth of web design has helped proliferate lorem ipsum across the internet as a placeholder for future text—and in some cases the final content (this is why we proofread, kids).Aldus Corporation, which later merged with Adobe Systems, ushered lorem ipsum into the information age with its desktop publishing software Aldus PageMaker. The program came bundled with lorem ipsum dummy text for laying out page content, and other word processors like Microsoft Word followed suit. More recently the growth of web design has helped proliferate lorem ipsum across the internet as a placeholder for future text—and in some cases the final content (this is why we proofread, kids).Aldus Corporation, which later merged with Adobe Systems, ushered lorem ipsum into the information age with its desktop publishing software Aldus PageMaker. The program came bundled with lorem ipsum dummy text for laying out page content, and other word processors like Microsoft Word followed suit. More recently the growth of web design has helped proliferate lorem ipsum across the internet as a placeholder for future text—and in some cases the final content (this is why we proofread, kids).Aldus Corporation, which later merged with Adobe Systems, ushered lorem ipsum into the information age with its desktop publishing software Aldus PageMaker. The program came bundled with lorem ipsum dummy text for laying out page content, and other word processors like Microsoft Word followed suit. More recently the growth of web design has helped proliferate lorem ipsum across the internet as a placeholder for future text—and in some cases the final content (this is why we proofread, kids).Aldus Corporation, which later merged with Adobe Systems, ushered lorem ipsum into the information age with its desktop publishing software Aldus PageMaker. The program came bundled with lorem ipsum dummy text for laying out page content, and other word processors like Microsoft Word followed suit. More recently the growth of web design has helped proliferate lorem ipsum across the internet as a placeholder for future text—and in some cases the final content (this is why we proofread, kids).Aldus Corporation, which later merged with Adobe Systems, ushered lorem ipsum into the information age with its desktop publishing software Aldus PageMaker. The program came bundled with lorem ipsum dummy text for laying out page content, and other word processors like Microsoft Word followed suit. More recently the growth of web design has helped proliferate lorem ipsum across the internet as a placeholder for future text—and in some cases the final content (this is why we proofread, kids).Aldus Corporation, which later merged with Adobe Systems, ushered lorem ipsum into the information age with its desktop publishing software Aldus PageMaker. The program came bundled with lorem ipsum dummy text for laying out page content, and other word processors like Microsoft Word followed suit. More recently the growth of web design has helped proliferate lorem ipsum across the internet as a placeholder for future text—and in some cases the final content (this is why we proofread, kids).Aldus Corporation, which later merged with Adobe Systems, ushered lorem ipsum into the information age with its desktop publishing software Aldus PageMaker. The program came bundled with lorem ipsum dummy text for laying out page content, and other word processors like Microsoft Word followed suit. More recently the growth of web design has helped proliferate lorem ipsum across the internet as a placeholder for future text—and in some cases the final content (this is why we proofread, kids).Aldus Corporation, which later merged with Adobe Systems, ushered lorem ipsum into the information age with its desktop publishing software Aldus PageMaker. The program came bundled with lorem ipsum dummy text for laying out page content, and other word processors like Microsoft Word followed suit. More recently the growth of web design has helped proliferate lorem ipsum across the internet as a placeholder for future text—and in some cases the final content (this is why we proofread, kids).</string>
    <string name="there_no_rule">Tidak Ada Peraturan</string>
    <string name="there_no_result">Tidak Ada Hasil Pencarian</string>
    <string name="spam">Spam</string>
    <string name="have_porn">Memiliki unsur pornografi</string>
    <string name="have_dangerous">Membahayakan atau menjurus tindakan berbahaya</string>
    <string name="have_sara">Menyinggung SARA</string>
    <string name="other">Lainnya</string>
    <string name="another_reason">Tulis alasan di sini...</string>
    <string name="give_reason_report">Berikan alasan kenapa kamu ingin melaporkan thread ini</string>
    <string name="give_reason_comment">Berikan alasan kenapa kamu ingin melaporkan komentar ini</string>
    <string name="report_thread">Laporkan Thread</string>
    <string name="are_you_sure_delete_thread">Apakah kamu yakin ingin menghapus thread ini?</string>
    <string name="are_you_sure_report_thread">Apakah kamu yakin ingin melaporkan thread ini?</string>
    <string name="are_you_sure_report_comment">Apakah kamu yakin ingin melaporkan komentar ini?</string>
    <string name="write_comment_here">Tulis komentar di sini…</string>
    <string name="give_comment">Beri komentar..</string>
    <string name="report_comment">Laporkan Komentar</string>
    <string name="wrong_code_verification">Kode verifikasi salah</string>
    <string name="did_not_receive_verification_code">Belum dapat kode verifikasi?</string>
    <string name="change_info_community">Ubah Info Komunitas</string>
    <string name="change_img_cover">Ubah Sampul</string>
    <string name="community_desc">Deskripsi Komunitas</string>
    <string name="write_your_bio">Tulis biodata disini..</string>
    <string name="write_your_desc_here">Tulis deskripsi di sini...</string>
    <string name="save">Simpan</string>
    <string name="delete_thread">Hapus Thread</string>
</resources>