<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditCommunityInfo">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/navBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/popScreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_left" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:text="@string/change_info_community" />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/coverLayout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/navBar"
        android:background="@drawable/background_community"
        android:clickable="true"
        android:gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/openFileBackground"
            style="@style/ButtonThemeMiniCyan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_mini_camera"
            android:drawableTint="@color/white"
            android:text="@string/change_img_cover" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/coverLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/openFileAvatar"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/dynamo_circle_avatar"
                app:civ_border_color="#FF000000"
                app:civ_border_width="0dp" />

            <LinearLayout
                android:id="@+id/textFieldLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/community_desc" />

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/etDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="25dp"
                    android:background="@drawable/field_shape"
                    android:gravity="top"
                    android:hint="@string/write_your_desc_here"
                    android:inputType="textMultiLine"
                    android:minLines="3"
                    android:padding="10dp" />

                <com.google.android.material.button.MaterialButton
                    android:textColor="@color/white"
                    android:enabled="false"
                    android:id="@+id/submitBtn"
                    style="@style/MaterialButtonStyle2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/save" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>