<?drawable version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/openDetailCommunity"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="id.kumparan.dynamo.DeleteThreadActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/navBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/popScreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_x"
            tools:ignore="ContentDescription" />
    </androidx.appcompat.widget.Toolbar>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/messageCardLayout"
        android:visibility="gone"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <include
            android:id="@+id/messageIncludeCard"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            layout="@layout/dynamo_card_messagge"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/headerContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imgThumbnail"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/dynamo_profile" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:layout_toEndOf="@id/imgThumbnail"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:id="@+id/tvCommunityName"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Community Name" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/tvUsername"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Username"
                                android:textColor="@color/grey"
                                android:textSize="14sp" />

                            <TextView
                                android:id="@+id/tvCommunityDate"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingHorizontal="10dp"
                                android:text="Community Date"
                                android:textColor="@color/grey"
                                android:textSize="14sp" />

                        </LinearLayout>

                    </LinearLayout>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="20dp">

                    <TextView
                        android:id="@+id/tvCommunityDesc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_toStartOf="@+id/imgMyCommunityUrl"
                        android:text="Desc" />

                    <ImageView
                        android:id="@+id/imgMyCommunityUrl"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_alignParentEnd="true"
                        android:scaleType="centerCrop"
                        android:src="@drawable/dynamo_profile" />
                </RelativeLayout>
            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="#D0E8E8E8" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingVertical="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/delete_thread"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/reportDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/give_reason_report" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layoutDirection="rtl">

                <RadioButton
                    android:id="@+id/radio0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/kumparan_green55"
                    android:checked="true"
                    android:text="@string/spam" />

                <RadioButton
                    android:id="@+id/radio1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/kumparan_green55"
                    android:text="@string/have_porn" />

                <RadioButton
                    android:id="@+id/radio2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/kumparan_green55"
                    android:text="@string/have_dangerous" />

                <RadioButton
                    android:id="@+id/radio3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/kumparan_green55"
                    android:text="@string/have_sara" />

                <RadioButton
                    android:id="@+id/radio4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/kumparan_green55"
                    android:text="@string/other" />

            </RadioGroup>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/otherField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/field_shape"
                    android:drawableTint="@color/grey"
                    android:gravity="top"
                    android:hint="@string/another_reason"
                    android:minLines="6"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="10dp"
                    android:visibility="gone" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/submitBtn"
                style="@style/MaterialButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rounded_button_selector"
                android:enabled="true"
                android:text="@string/next"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>
</LinearLayout>
